The plugin isn't needed. I had to directly add the conditionals within the mixins for the shield and trident. The shield is functional, but showases a visual bug of rapidly raising the shield. It's as if the mod doesn't know its own config value, or that it switches rapidly somehow