@@ -6,6 +6,7 @@ import com.google.gson.Gson;
 import com.google.gson.JsonObject;
 import net.minecraft.core.registries.BuiltInRegistries;
 import net.minecraft.world.item.Item;
+import net.minecraft.world.level.block.TintedGlassBlock;
 import net.neoforged.bus.api.SubscribeEvent;
 import net.neoforged.fml.common.EventBusSubscriber;
 import net.neoforged.fml.common.Mod;
@@ -25,41 +26,42 @@ public class Config {
     public static boolean tridentRiptideFixIfDatapack;
     public static boolean playerResetOnDeath;
     public static List<Integer> loyaltyCooldowns;
+    static Integer[] integerArray = {140, 80, 60, 40};
 
 
     private static final ModConfigSpec.Builder BUILDER = new ModConfigSpec.Builder();
 
-    private static final ModConfigSpec.IntValue FORME_TIMER = BUILDER
+    public static final ModConfigSpec.IntValue FORME_TIMER = BUILDER
             .comment("The timer bound to items which determines the amount of time in ticks an item may be in Forme change")
             .defineInRange("formeTimer", 1800, 0, Integer.MAX_VALUE);
 
-    private static final ModConfigSpec.IntValue FORME_PLAYER_COOLDOWN = BUILDER
+    public static final ModConfigSpec.IntValue FORME_PLAYER_COOLDOWN = BUILDER
             .comment("The amount of time in ticks the player can Forme change (global cooldown)")
             .defineInRange("formePlayerCooldown", 3600, 0, Integer.MAX_VALUE);
 
-    private static final ModConfigSpec.DoubleValue MULTIPLIER = BUILDER
+    public static final ModConfigSpec.DoubleValue MULTIPLIER = BUILDER
             .comment("The multiplier for attack damage")
             .defineInRange("multiplier", 0.25, 0.0, Double.MAX_VALUE);
 
-    private static final ModConfigSpec.ConfigValue<String> BINDINGS = BUILDER
+    public static final ModConfigSpec.ConfigValue<String> BINDINGS = BUILDER
             .comment("String to be transformed into JSON by Gson to store information about what Forme applies to what list of weapons")
             .define("bindings", "{\"minecraft:trident\": \"shovel$\", \"minecraft:mace\": \"_axe$\"}");
 
-    private static final ModConfigSpec.BooleanValue SHIELD_CROUCH = BUILDER
+    public static final ModConfigSpec.BooleanValue SHIELD_CROUCH = BUILDER
             .comment("Should the shield be only activated on crouch instead of right click. Default: false")
             .define("shieldCrouch", false);
 
-    private static final ModConfigSpec.BooleanValue TRIDENT_RIPTIDE_FIX_IF_DATAPACK = BUILDER
+    public static final ModConfigSpec.BooleanValue TRIDENT_RIPTIDE_FIX_IF_DATAPACK = BUILDER
             .comment("Can both loyalty and riptide be enchanted on an item if a datapack allowing loyalty and riptide to not be incompatible exists (through modifying riptide enchantment components). Default: false")
             .define("tridentRiptideFixIfDatapack", false);
 
-    private static final ModConfigSpec.BooleanValue PLAYER_RESET_ON_DEATH = BUILDER
+    public static final ModConfigSpec.BooleanValue PLAYER_RESET_ON_DEATH = BUILDER
             .comment("Should the item and player's timers be reset upon death (also reverting the Forme item if any)? HIGHLY RECOMMENDED TO BE TRUE FOR NON-KEEPINVENTORY (DOES NOT INCLUDE GRAVESTONES!) PACKS. Default: true")
             .define("playerResetOnDeath", true);
 
-    private static final ModConfigSpec.ConfigValue<List<Integer>> LOYALTY_COOLDOWNS = BUILDER
+    public static final ModConfigSpec.ConfigValue<List<Integer>> LOYALTY_COOLDOWNS = BUILDER
             .comment("Array listing the cooldown timings in ticks (20 ticks = 1 second) that each level of loyalty should incur on a Forme Trident. The first number is for a trident without loyalty")
-            .define("loyaltyCooldowns", Arrays.asList(140, 80, 60, 40));
+            .define("loyaltyCooldowns", () -> List.of(140, 80, 60, 40), o -> o instanceof Integer);
 
     public static final ModConfigSpec SPEC = BUILDER.build();
 
